# QuikQtBridge

./: .gitignore  CMakeLists.txt  CMakeSettings.json  QuikQtBridge_global.h  README.md  bridgetcpserver.cpp  bridgetcpserver.h  jsonprotocolhandler.cpp  jsonprotocolhandler.h  qtmain.cpp  quikcoast.cpp  quikcoast.h  quikcoastbootstrap.cpp.in  quikcoastbootstrap.h.in  quikqtbridge.cpp  quikqtbridge.h  serverconfigreader.cpp  serverconfigreader.h
example/: testLuaServer.py
lua/: QuikQtBridgeStart.json  QuikQtBridgeStart.lua
